# interface-reconstruction-library

./: CMakeLists.txt
irl/data_structures/: small_vector.h  unordered_map.h
irl/generic_cutting/half_edge_cutting/: half_edge_cutting_drivers.tpp  half_edge_cutting_initializer.tpp
irl/interface_reconstruction_methods/: lvira_optimization.h  lvira_optimization.tpp
irl/parameters/: compiler_type.h
tests/: CMakeLists.txt
